--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>はじめてのgithubうぇぶさいと！</title>
 </head>
 <body>
-
+<Center>
+    <h1>はじめてのgithubうぇぶさいと！</h1>
+    <h2>毎日いらすとか描きたい</h2>
+</Center>
 </body>
 </html>
