add history page

--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>はじめてのgithubうぇぶさいと！</title>
-</head>
-<body>
-<Center>
-    <h1>はじめてのgithubうぇぶさいと！</h1>
-    <h2>毎日いらすとか描きたい</h2>
-</Center>
-</body>
+  </head>
+  <body>
+    <center>
+      <h1>はじめてのgithubうぇぶさいと！</h1>
+      <a href="pages/history_page.html">このうぇぶさいとのれきし</a>
+    </center>
+  </body>
 </html>
