--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
     <center>
       <h1>はじめてのgithubうぇぶさいと！</h1>
+      <a href="pages/daily_report_page.html">にっぽー</a>
       <a href="pages/history_page.html">このうぇぶさいとのれきし</a>
     </center>
   </body>
