--- a/pages/history_page.html
+++ b/pages/history_page.html
@@ -8,8 +8,9 @@
   <body>
     <h1>このサイトの歴史</h1>
     <ul>
-      <li>2024/02/03/土：サイトを作成、公開</li>
+      <li>2024/10/23/水：daily reportページを作成</li>
       <li>2024/02/06/火：Hisotryページを作成</li>
+      <li>2024/02/03/土：サイトを作成、公開</li>
     </ul>
   </body>
 </html>
