--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>はじめてのgithubうぇぶさいと！</title>
+    <title>Hakozaki's Homepage</title>
   </head>
   <body>
     <center>
-      <h1>はじめてのgithubうぇぶさいと！</h1>
-      <a href="pages/daily_report_page.html">にっぽー</a>
-      <a href="pages/history_page.html">このうぇぶさいとのれきし</a>
+      <h1>Hakozakiのホームページ</h1>
+      <button onclick="pages/about.html">About</button>
+      <button onclick="pages/portfolio.html">portfolio</button>
+      <button onclick="pages/tools.html">tools</button>
+      <button onclick="pages/notes.html">notes</button>
+      <button onclick="pages/gallery.html">gallery</button>
     </center>
   </body>
 </html>
