--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
   <body>
     <center>
       <h1>Hakozakiのホームページ</h1>
-      <button onclick="pages/about.html">About</button>
-      <button onclick="pages/portfolio.html">portfolio</button>
-      <button onclick="pages/tools.html">tools</button>
-      <button onclick="pages/notes.html">notes</button>
-      <button onclick="pages/gallery.html">gallery</button>
+      <li>
+        <ul><a href="pages/about.html">About</a></ul>
+        <ul><a href="pages/portfolio.html">portfolio</a></ul>
+        <ul><a href="pages/tools.html">tools</a></ul>
+        <ul><a href="pages/notes.html">notes</a></ul>
+        <ul><a href="pages/gallery.html">gallery</a></ul>
+      </li>
     </center>
   </body>
 </html>
