--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
   <body>
     <center>
       <h1>Hakozakiのホームページ</h1>
-      <li>
-        <ul><a href="pages/about.html">About</a></ul>
-        <ul><a href="pages/portfolio.html">portfolio</a></ul>
-        <ul><a href="pages/tools.html">tools</a></ul>
-        <ul><a href="pages/notes.html">notes</a></ul>
-        <ul><a href="pages/gallery.html">gallery</a></ul>
-      </li>
+      <ul>
+        <li><a href="pages/about.html">About</a></li>
+        <li><a href="pages/portfolio.html">portfolio</a></li>
+        <li><a href="pages/tools.html">tools</a></li>
+        <li><a href="pages/notes.html">notes</a></li>
+        <li><a href="pages/gallery.html">gallery</a></li>
+      </ul>
     </center>
   </body>
 </html>
