--- a/pages/tools.html
+++ b/pages/tools.html
@@ -9,7 +9,7 @@
   <h1>Webツール</h1>
   <h2>今後以下の内容を作成予定</h2>
   <ul>
-    <li>制作したWebツール</li>
+    <li><a href="./ar/">AR</a></li>
   </ul>
 </body>
 </html>
