--- a/pages/ar/index.html
+++ b/pages/ar/index.html
@@ -12,7 +12,10 @@
 </head>
 
 <body style="margin: 0; overflow: hidden;">
-  <a-scene embedded arjs>
+  <a-scene
+  embedded
+  vr-mode-ui="enabled: false"
+  arjs="sourceType: webcam; debugUIEnabled: true; trackingMethod: best;">
     <a-marker preset="hiro">
       <a-box position="0 0.5 0" material="color: red;"></a-box>
     </a-marker>
