--- a/pages/tools.html
+++ b/pages/tools.html
@@ -10,6 +10,7 @@
   <h2>今後以下の内容を作成予定</h2>
   <ul>
     <li><a href="./ar/">AR</a></li>
+    <li><a href="./ar/face">笑い男</a></li>
   </ul>
 </body>
 </html>
