--- a/pages/ar/face/index.html
+++ b/pages/ar/face/index.html
@@ -5,37 +5,23 @@
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
   <title>Face Emoji Overlay (Minimum)</title>
   <style>
-    html, body { margin: 0; padding: 0; height: 100%; background: #000; overflow: hidden; }
-    #wrap { position: relative; width: 100%; height: 100%; }
+    html, body { margin:0; padding:0; height:100%; background:#000; overflow:hidden; }
+    #wrap { position:relative; width:100%; height:100%; }
+    video, canvas { position:absolute; inset:0; width:100%; height:100%; object-fit:cover; }
+    video { transform: scaleX(-1); }
+    canvas { pointer-events:none; transform: scaleX(-1); }
 
-    /* カメラ映像 */
-    video {
-      position: absolute; inset: 0;
-      width: 100%; height: 100%;
-      object-fit: cover;
-      transform: scaleX(-1); /* 自撮り鏡像 */
-    }
-
-    /* オーバーレイ描画用 */
-    canvas {
-      position: absolute; inset: 0;
-      width: 100%; height: 100%;
-      pointer-events: none;
-      transform: scaleX(-1); /* videoと合わせる */
-    }
-
-    /* 簡易UI */
     .hud {
-      position: absolute; left: 12px; top: 12px;
-      color: #fff; font: 14px/1.4 system-ui, -apple-system, sans-serif;
-      background: rgba(0,0,0,.45); padding: 10px 12px; border-radius: 10px;
+      position:absolute; left:12px; top:12px;
+      color:#fff; font:14px/1.4 system-ui, -apple-system, sans-serif;
+      background: rgba(0,0,0,.45); padding:10px 12px; border-radius:10px;
       max-width: calc(100% - 24px);
     }
     .hud button {
-      margin-top: 8px; padding: 8px 10px; border-radius: 10px;
-      border: 0; background: #fff; color: #000; font-weight: 600;
+      margin-top:8px; padding:8px 10px; border-radius:10px;
+      border:0; background:#fff; color:#000; font-weight:600;
     }
-    .hint { opacity: .85; font-size: 12px; margin-top: 6px; }
+    .hint { opacity:.85; font-size:12px; margin-top:6px; }
   </style>
 </head>
 
@@ -65,69 +51,58 @@
     const statusEl = document.getElementById("status");
     const switchBtn = document.getElementById("switchBtn");
 
-    // 透過PNGの絵文字（Twemojiの画像）
     const emojiImg = new Image();
     emojiImg.crossOrigin = "anonymous";
     emojiImg.src = "https://cdnjs.cloudflare.com/ajax/libs/twemoji/14.0.2/72x72/1f600.png"; // 😀
-    // ここを別の絵文字に変えたい場合は後で案内します
 
-    // 画面リサイズに追従
     function fitCanvas() {
       const dpr = window.devicePixelRatio || 1;
       canvas.width = Math.floor(canvas.clientWidth * dpr);
       canvas.height = Math.floor(canvas.clientHeight * dpr);
-      ctx.setTransform(dpr, 0, 0, dpr, 0, 0); // CSSピクセル基準で描く
+      ctx.setTransform(dpr, 0, 0, dpr, 0, 0);
     }
     window.addEventListener("resize", fitCanvas);
 
-    // フロント/リア切替
-    let facingMode = "user"; // user = 自撮り, environment = 背面
+    let facingMode = "user";
     let camera = null;
 
-    async function start() {
+    async function main() {
+      fitCanvas();
       statusEl.textContent = "初期化中…（カメラ許可してください）";
 
-      fitCanvas();
-
-      const faceDetection = new FaceDetection.FaceDetection({
+      // ★ ここが修正点：FaceDetectionはそのまま new FaceDetection(...)
+      const faceDetection = new FaceDetection({
         locateFile: (file) => `https://cdn.jsdelivr.net/npm/@mediapipe/face_detection/${file}`
       });
 
       faceDetection.setOptions({
-        model: "short",            // 軽め（スマホ向け）
+        model: "short",
         minDetectionConfidence: 0.6
       });
 
       faceDetection.onResults((results) => {
-        // 画面クリア
         ctx.clearRect(0, 0, canvas.clientWidth, canvas.clientHeight);
 
-        if (!results.detections || results.detections.length === 0) {
+        const dets = results?.detections || [];
+        if (dets.length === 0) {
           statusEl.textContent = "顔が見つかりません（明るい場所で正面を向いてね）";
           return;
         }
 
-        statusEl.textContent = `顔検知: ${results.detections.length}人`;
+        statusEl.textContent = `顔検知: ${dets.length}人`;
 
-        // 一番手前っぽい1人目だけ使う（最小）
-        const det = results.detections[0];
-        const box = det.boundingBox; // {xCenter, yCenter, width, height}（0..1）
+        const det = dets[0];
+        const box = det.boundingBox;
         if (!box) return;
 
-        // 正規化座標 → 画面座標（CSSピクセル）
         const x = box.xCenter * canvas.clientWidth;
         const y = box.yCenter * canvas.clientHeight;
-
-        // 顔サイズに合わせて絵文字サイズを決める
         const faceW = box.width * canvas.clientWidth;
-        const size = Math.max(64, faceW * 0.9); // 最小64px
+        const size = Math.max(64, faceW * 0.9);
 
-        // 絵文字を顔の中心に描画
-        const half = size / 2;
-        ctx.drawImage(emojiImg, x - half, y - half, size, size);
+        ctx.drawImage(emojiImg, x - size/2, y - size/2, size, size);
       });
 
-      // MediaPipeのカメラユーティリティで毎フレーム送る
       async function startCamera() {
         if (camera) camera.stop();
 
@@ -153,10 +128,9 @@
       await startCamera();
     }
 
-    // 시작
-    start().catch((e) => {
+    main().catch((e) => {
       console.error(e);
-      statusEl.textContent = "起動失敗：カメラ許可 / HTTPS / ブラウザ（Chrome推奨）を確認してください";
+      statusEl.textContent = "起動失敗：ページを更新（キャッシュ）/ カメラ許可 / HTTPS / Chrome を確認してください";
     });
   </script>
 </body>
